<resources>
    <string name="app_name">Apartment Rater</string>

    <string name="home_title">Apartments Rater</string>
    <string name="save_review_button">Send Review</string>

    <string name="apartment_image_description">Photo of the apartment building</string>
    <string name="review_hint">How was your experience?</string>

    <string name="settings_title">Settings</string>
    <string name="settings_icon_description">Settings icon</string>
    <string name="notifications_switch">Enable Notifications</string>

    <string name="location_button_label">See results for my area</string>
    <string name="location_permission_denied">Permission denied</string>
    <string name="location_unavailable">Location unavailable</string>
    <string name="results_for_prefix">Results for %1$s, %2$s</string>
    <string name="results_for_latlon">Results for %.5f, %.5f</string>
    <string name="location_error">Location error</string>

</resources>
