<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/img_settings_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_settings_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/settings_icon_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/img_settings_icon"
        app:layout_constraintBottom_toBottomOf="@id/img_settings_icon"
        app:layout_constraintStart_toEndOf="@id/img_settings_icon"
        android:layout_marginStart="16dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications_switch"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/img_settings_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>